# yt-forecasting

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt
models/: soft_voting_ensemble.py
notebooks/: Phase1_Data_Collection.ipynb  Phase2_Cleaning_and_Feature_Engineering.ipynb  Phase3_Modeling_Eval_Calibration.ipynb  Phase4_Analysis.ipynb
reports/: bundle_meta_2025-09-22T03-30-14Z.json  test_eval_2025-09-22T03-58-30Z.parquet  test_indices_2025-09-22T03-45-49Z.npy
scripts/: combine_and_dedupe.py
tests/: conftest.py  test_adversarial_inputs.py  test_app_e2e.py  test_explainability_smoke.py  test_features.py  test_model_roundtrip.py  test_pipeline.py  test_reproducibility.py  test_schema.py  test_threshold_logic.py
