[project]
name = "yt-forecast"
version = "0.1.0"
description = "Forecasting YouTube video performance using pre-publish metadata"
requires-python = ">=3.9"
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]

dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "pyarrow>=16",
  "requests>=2.32",
  "tqdm>=4.66",
  "python-dotenv>=1.0",
  "matplotlib>=3.8"
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.2",
  "nbqa>=1.8",
  "ipykernel"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39","py310","py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","PL"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
